--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="examples/10_functions.js"></script> 
+    <script src="examples/11_map_filter.js"></script> 
 </body>
 </html>
