--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    <script src="examples/11_map_filter.js"></script> 
+</head><h1>Introduccion a JavaScript</h1>
+<body><h2>Resultados de los scripts de Javier</h2>
+    <script type="module" src="modules/main.js"></script> 
 </body>
 </html>
