--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head><h1>Introduccion a JavaScript</h1>
 <body><h2>Resultados de los scripts de Javier</h2>
-    <script type="module" src="modules/main.js"></script> 
+    <script type="module" src="examples/12_async.js"></script> 
 </body>
 </html>
